tools/k8s/api/food-challenge-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: food-challenge-api
  namespace: fiap-tech-challenge
spec:
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
      nodePort: 32000
  type: NodePort
  selector:
    app: food-challenge-api
